[package]
name = "tunnel-server"
version = "0.2.0"
edition = "2021"
description = "Tunnel relay server for secure remote access"
license = "MIT"
authors = ["manhpham90vn"]

[package.metadata.deb]
maintainer = "manhpham90vn"
section = "net"
priority = "optional"
assets = [
    ["target/release/tunnel-server", "usr/bin/", "755"],
]
conf-files = []
systemd-units = { unit-name = "tunnel-server", enable = true }


[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
